--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
   "type": "module",
   "main": "index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "live-server --open=./index.html",
+    "test": "echo \"Pas de test défini pour le moment\""
   },
+  
   "dependencies": {
     "@tailwindcss/cli": "^4.1.3",
     "animejs": "^4.0.0",
